some minor changes

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid header__container">
 
     <a href="" class="logo">
-      <img loading="lazy" src="img/logo.svg" class="image" width="228" height="48" alt="Логотип Roboschool">
+      <img loading="lazy" src="img/logo_2.svg" class="image" width="48" height="48" alt="Логотип Roboschool">
     </a>
 
     <nav class="nav" title="Главное меню" data-menu>
@@ -14,7 +14,7 @@
       <button class="btn-reset burger-close" aria-label="Закрыть меню" data-menu-close></button>
     </nav>
 
-    <a href="tel:+78000001122" class="phone header__phone">+7 800 000 11 22</a>
+    <a href="tel:+78000001122" class="phone header__phone">8 800 000 11 22</a>
 
     <button class="btn-reset burger" aria-label="Открыть меню" aria-expanded="false" data-burger>
       <span class="burger__line"></span>
