--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -3,7 +3,7 @@
     <h2 class="price__title section-title">Выберите нужный пакет</h2>
 
     <ul class="list-reset price__list">
-      <li class="price__item price__item--active">
+      <li class="price__item price__item">
         <h3 class="price__subtitle">– PRO –</h3>
         <p class="price__sum">20.000 ₽</p>
         <p class="price__description">
