--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -365,6 +365,20 @@ a {
   }
 }
 
+.logo img {
+  -webkit-filter: invert(100%) sepia(0%) saturate(7490%) hue-rotate(228deg) brightness(101%) contrast(101%);
+  filter: invert(100%) sepia(0%) saturate(7490%) hue-rotate(228deg) brightness(101%) contrast(101%);
+  -webkit-transition: -webkit-filter 0.1s linear;
+  transition: -webkit-filter 0.1s linear;
+  transition: filter 0.1s linear;
+  transition: filter 0.1s linear, -webkit-filter 0.1s linear;
+}
+@media (any-hover: hover) {
+  .logo img:hover {
+    -webkit-filter: invert(17%) sepia(87%) saturate(3356%) hue-rotate(346deg) brightness(91%) contrast(94%);
+    filter: invert(17%) sepia(87%) saturate(3356%) hue-rotate(346deg) brightness(91%) contrast(94%);
+  }
+}
 @media (max-width: 576px) {
   .logo {
     width: 136px;
@@ -760,6 +774,13 @@ a {
 .hero__link {
   padding-block: clamp(1.1rem, 4vw, 1.625rem);
   padding-inline: 3.375rem;
+  -webkit-transition: scale 0.2s linear;
+  transition: scale 0.2s linear;
+}
+@media (any-hover: hover) {
+  .hero__link:hover {
+    scale: 1.1;
+  }
 }
 @media (max-width: 768px) {
   .hero__link {
@@ -1054,8 +1075,8 @@ a {
   -ms-flex-align: center;
   align-items: center;
   color: var(--dark-color);
-  -webkit-transition: scale 0.3s ease-in, background-color 0.15s linear;
-  transition: scale 0.3s ease-in, background-color 0.15s linear;
+  -webkit-transition: scale 0.3s ease-in, background-color 0.15s linear, color 0.2s linear;
+  transition: scale 0.3s ease-in, background-color 0.15s linear, color 0.2s linear;
 }
 .price__item--active {
   border: 1px solid var(--dark-color);
