--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,14 +3,14 @@
 
     <div class="footer__left">
       <a href="" class="logo footer__logo">
-        <img loading="lazy" src="img/logo.svg" class="image" width="228" height="48" alt="Логотип Roboschool">
+        <img loading="lazy" src="img/logo_2.svg" class="image" width="48" height="48" alt="Логотип Roboschool">
       </a>
 
       <p class="footer__copy">
-        © ROBO.SCHOOL
+        © SCHOOL
       </p>
     </div>
 
-    <a href="tel:+78000001122" class="phone">+7 800 000 11 22</a>
+    <a href="tel:+78000001122" class="phone">8 800 000 11 22</a>
   </div>
 </footer>
