--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="hero__content">
 
       <h1 class="hero__title">
-        Robo School
+        Roboto
         <span class="hero__title-text">
           Курсы повышения квалификации по робототехнике для педагогов начальной школы
         </span>
