--- a/src/scss/components/_price.scss
+++ b/src/scss/components/_price.scss
@@ -23,7 +23,8 @@
 
     transition:
         scale 0.3s ease-in,
-        background-color 0.15s linear;
+        background-color 0.15s linear,
+        color 0.2s linear;
 
         &--active {
           border: 1px solid var(--dark-color);
