--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -92,7 +92,7 @@
       left: 50%;
       bottom: 5vw;
       transform: translateX(-50%) translateY(0);
-      width: clamp(270px, 20vw, 50%);
+      width: clamp(30vh, 20vw, 50%);
     }
   }
 }
