--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -320,7 +320,7 @@ a {
 
 .header {
   background-color: var(--dark-color);
-  padding-top: 30px;
+  padding-top: min(30px, 3vh);
 }
 @media (max-width: 992px) {
   .header {
@@ -800,7 +800,7 @@ a {
     -webkit-transform: translateX(-50%) translateY(0);
     -ms-transform: translateX(-50%) translateY(0);
     transform: translateX(-50%) translateY(0);
-    width: clamp(270px, 20vw, 50%);
+    width: clamp(30vh, 20vw, 50%);
   }
 }
 
